--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,7 @@
         <div class="grid-item">
             <p align="center">VIDEO</p>
            <video  width="320"  height="240"  controls >
-            <source src="nature.mp4" type="video/mp4"
+            <source src="Lotus Dancing in The Wind.mp4" type="video/mp4"
               Your browser does not support the video tag.
             </video>
         </div>
